# vwc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: vwc.cast
docs/pydoc/: index.md
docs/research/: GNU_coreutils_9.4.info  GNU_coreutils_9.4.manpage  index.md  test.sh
scripts/: release.sh  test.sh
src/vwc/: __init__.py  app.py  cli.py  count.py  main.py  vwc.py
src/vwc/wc/: __init__.py  bsd.py  busybox.py  gnu.py  linux.py  wc.py
tests/integration/: .gitignore  build.sh  run_test.sh  test_vwc.py
tests/integration/containerfiles/: Containerfile.gnu  Dockerfile.busybox
tests/integration/dockerfiles/: Dockerfile.gnu
tests/integration/test_scripts/: count_lines.sh  count_words_stdin.sh  directories.sh  fd_input.sh  line_endings.sh  line_endings_bad.sh  line_endings_crlf.sh  line_endings_lf.sh  max_line_len.sh  max_line_len_combo.sh  max_line_len_multi.sh  max_line_len_one.sh  missing_files.sh  multibyte.sh  named_stdin.sh  padding.sh  tabs.sh  wc.sh
